# adv_robotics

./: .gitignore
catkin_ws/: KeyFrameTrajectory.txt  imgui.ini  pointcloud.pcd  test.bag
catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
catkin_ws/devel/include/phidgets_high_speed_encoder/: EncoderDecimatedSpeed.h
catkin_ws/devel/include/phidgets_ik/: SetDigitalOutput.h  SetDigitalOutputRequest.h  SetDigitalOutputResponse.h
catkin_ws/devel/include/realsense2_camera/: Extrinsics.h  IMUInfo.h
catkin_ws/devel/lib/bldc_control/: bldc_control_publisher  bldc_control_subscriber
catkin_ws/devel/lib/pkgconfig/: bldc_control.pc  my_pkg.pc
catkin_ws/install/: .rosinstall  _setup_util.py  setup.sh
catkin_ws/install/share/bldc_control/: package.xml
catkin_ws/src/: KeyFrameTrajectory.txt  pointcloud.pcd
catkin_ws/src/ORB_SLAM2/: command.sh
catkin_ws/src/ORB_SLAM2/include/: System.h
catkin_ws/src/ORB_SLAM2/src/: LocalMapping.cc  LoopClosing.cc  System.cc  Tracking.cc
catkin_ws/src/ball_detector/: CMakeLists.txt  package.xml
catkin_ws/src/ball_detector/scripts/: ball_detector.py  baller.py
catkin_ws/src/bldc_control/: CMakeLists.txt
catkin_ws/src/bldc_control/src/: bldc_control_publisher.cpp  bldc_control_subscriber.cpp  maestro.h
catkin_ws/src/my_pkg/: CMakeLists.txt  package.xml
catkin_ws/src/my_pkg/scripts/: collision_detector.py  controller.py  depth.py  fsm_speed_controller.py  pub_sub.py  publish_cmd_vel.py  publisher_distance.py  read_point_cloud.py  sec_speed_controller.py  (+4 more)
catkin_ws/src/stop_sign/: CMakeLists.txt  package.xml
(+80 files in other folders)
